[gd_scene load_steps=5 format=3 uid="uid://hi6w5rlrqcb7"]

[ext_resource type="Script" uid="uid://bbgv3kluqgdr" path="res://Scripts/ui/inventory_window.gd" id="1_rjphp"]
[ext_resource type="PackedScene" uid="uid://b5e4sxoaw5a02" path="res://Scenes/ui/inventory_panel.tscn" id="1_xwfgj"]
[ext_resource type="PackedScene" uid="uid://s3hmvar0uynt" path="res://Scenes/ui/crafting_panel.tscn" id="3_848yu"]
[ext_resource type="PackedScene" uid="uid://dhtjbqbxryacb" path="res://Scenes/ui/hotbar_panel.tscn" id="4_2ik87"]

[node name="InventoryWindow" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_rjphp")

[node name="TabButtons" type="HBoxContainer" parent="."]
layout_mode = 0
offset_right = 20.0
offset_bottom = 8.0

[node name="InventoryButton" type="Button" parent="TabButtons"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2

[node name="CraftingButton" type="Button" parent="TabButtons"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2

[node name="InventoryPanel" parent="." instance=ExtResource("1_xwfgj")]
layout_mode = 0
offset_top = 32.0
offset_bottom = 156.0

[node name="CraftingPanel" parent="." instance=ExtResource("3_848yu")]
layout_mode = 0
offset_top = 32.0
offset_bottom = 32.0

[node name="HotbarPanel" parent="." instance=ExtResource("4_2ik87")]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
offset_left = -162.0
offset_top = 250.0
offset_right = 158.0
offset_bottom = 282.0
grow_vertical = 0
